--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="card mb-3" style="max-width: 100%;">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="0 (2).jpeg" class="card-img" alt="">
+                        <img src="images/IMG_1175.JPG" class="card-img" alt="">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
