--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="icon" type="image/png" href="ezgif.com-gif-maker.png" />
+    <link rel="icon" type="image/png" href="images/ezgif.com-gif-maker.png" />
     <link rel="stylesheet" type="text/css" href="css/portfoliostyle.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -23,7 +23,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="http:\\www.outdoorful.com">
-            <img src="Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos
+            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
