--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,9 @@
                     <div class="card">
                         <img class="card-img-top" src="images/business-q-c-640-480-3.jpg" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Hangman</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                            <h5 class="card-title"><a class="nav-link" href="WordGuess.html" id="Hangman">Word Guess Game (Live!) </a></h5>
+
+                            <p class="card-text">Check out my first Javascript project. It's a classic and clean Word Guess game....enjoy!
                             </p>
 
                         </div>
