--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
             <div class="row">
                 <div class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="images/business-q-c-640-480-3.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/Screen Shot 2019-12-19 at 12.29.09 AM.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title"><a class="nav-link" href="WordGuess.html" id="Hangman">Word Guess Game (Live!) </a></h5>
 
