--- a/portfolio.html
+++ b/portfolio.html
@@ -69,10 +69,10 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="images/business-q-c-640-480-5.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/Picture1.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">RPG Game</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/unit-4-game/" id="Hangman">Crystal Collector Game (Live!) </a></h5>
+                            <p class="card-text">For this project, I created another fun and interactive game for web browsers. This time, the app dynamically updates my HTML pages with the jQuery library!</p>
 
                         </div>
                     </div>
