updated crystal portfolio card image

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="images/Picture1.png" alt="Card image cap">
+                        <img class="card-img-top" src="images/cardimage.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/unit-4-game/" id="Hangman">Crystal Collector Game (Live!) </a></h5>
                             <p class="card-text">For this project, I created another fun and interactive game for web browsers. This time, the app dynamically updates my HTML pages with the jQuery library!</p>
