adding Trivia Game

--- a/portfolio.html
+++ b/portfolio.html
@@ -71,17 +71,17 @@
                     <div class="card">
                         <img class="card-img-top" src="images/cardimage.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/unit-4-game/" id="Hangman">Crystal Collector Game (Live!) </a></h5>
+                            <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/unit-4-game/" id="Crystal">Crystal Collector Game (Live!)</a></h5>
                             <p class="card-text">For this project, I created another fun and interactive game for web browsers. This time, the app dynamically updates my HTML pages with the jQuery library!</p>
 
                         </div>
                     </div>
 
                     <div class="card">
-                        <img class="card-img-top" src="images/food-q-c-640-480-7.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/OTriv.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Trivia Game</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/TriviaGame/" id="Trivia">Trivia Game (Live!)</a></h5>
+                            <p class="card-text">I created an Outdoor based Trivia game using JavaScript for the logic and jQuery to manipulate HTML. It's also utilizing valid HTML and stylish CSS.</p>
 
                         </div>
                     </div>
