Updated portfolio with GifTastic

--- a/portfolio.html
+++ b/portfolio.html
@@ -91,10 +91,10 @@
             <div class="row">
                 <div id="row2" class="card-deck">
                     <div class="card">
-                        <img class="card-img-top" src="images/sports-q-c-640-480-10.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/logo2.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Info Widget</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/GifTastic/" id="Trivia">GifTastic (Live!)</a></h5>
+                            <p class="card-text">In this assignment, I used the GIPHY API to make a dynamic web page that populates with gifs of your choice. This includes calling the GIPHY API and using JavaScript and jQuery to change the HTML of on the site.</p>
 
                         </div>
                     </div>
