adding train app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,10 +99,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="images/sports-q-c-640-480-6.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/train.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Rock Paper Scissors</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/Train-Schedule/" id="Trivia">Train Scheduler (Live!)</a></h5>
+                            <p class="card-text">In this assignment, I created a train schedule application that incorporates Firebase to host arrival and departure data. The app will retrieve and manipulate this information with Moment.js. This website will provide up-to-date
+                                information about various trains, namely their arrival times and how many minutes remain until they arrive at their station.</p>
 
                         </div>
                     </div>
