--- a/portfolio.html
+++ b/portfolio.html
@@ -108,10 +108,11 @@
                         </div>
                     </div>
                     <div class="card">
-                        <img class="card-img-top" src="images/technics-q-c-640-480-9.jpg" alt="Card image cap">
+                        <img class="card-img-top" src="images/parksyimage.png" alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Blog Site</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                            <h5 class="card-title"><a class="nav-link" href="https://team-dane-and-friends.github.io/Parksy/" id="Trivia">Parksy (Live!)</a></h5>
+                            <p class="card-text">Paksy puts the splendor of our National Parks at your fingertips! With my crack team, we conceived and executed a design that solves a real-world problem by integrating data received from multiple server-side API requests.
+                            </p>
 
                         </div>
                     </div>
