--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" href="images/ezgif.com-gif-maker.png" />
-    <link rel="stylesheet" type="text/css" href="css/contactstyle.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/social.css">
+    <link rel="stylesheet" type="text/css" href="css/contactstyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Contact Page</title>
 
@@ -23,12 +26,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="http:\\www.outdoorful.com">
-            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos
+            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos | Founder & Tecnologist
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <a class="nav-link " href="index.html">About <span class="sr-only">(current)</span></a>
@@ -50,35 +53,48 @@
         <div id="pcard" class="card mb-3" style="max-width: 100%;">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Contact Me</h1>
+                    <h1 id="contact">Contact Me
+
+                    </h1>
                     <hr>
                 </div>
             </div>
 
-            <form>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Name:</label>
-                    <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Enter your name here...">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlInput1">Email address:</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlSelect2">How cool is Jordan from 1-5 (1 being the coolest):</label>
-                    <select multiple class="form-control" id="exampleFormControlSelect2">
-                        <option>1</option>
-                        <option>2</option>
-                        <option>3</option>
-                        <option>4</option>
-                        <option>5</option>
-                      </select>
-                </div>
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1">Leave a Message</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-            </form>
+            <div class="contact-info">
+
+                <h3>Office: 860-794-9360</h3><br>
+                <h3>Email:
+                    <a href="mailto:jordan.r.servos@outdoorful.com">jordan.r.servos@outdoorful.com</a></h3>
+
+            </div>
+
+            <i class="fal fa-comment-alt-lines"></i>
+
+
+            <div class="social">
+                <a class="btn btn-social-icon btn-linkedin" href="https://www.linkedin.com/in/jservos/">
+                    <span class="fa fa-linkedin"></span>
+                </a>
+
+                <a class="btn btn-social-icon btn-instagram" href="https://www.instagram.com/outdoorful/?hl=en">
+                    <span class="fa fa-instagram"></span>
+                </a>
+
+                <a class="btn btn-social-icon btn-facebook" href="https://www.facebook.com/Outdoorful-426328904639127/">
+                    <span class="fa fa-facebook"></span>
+                </a>
+
+                <a class="btn btn-social-icon btn-github" href="https://github.com/jordanservos">
+                    <span class="fa fa-github"></span>
+                </a>
+
+                <a class="btn btn-social-icon btn-reddit" href="https://www.reddit.com/user/outdoorful/">
+                    <span class="fa fa-reddit"></span>
+                </a>
+            </div>
+
+
+
 
         </div>
 
