--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="http:\\www.outdoorful.com">
-            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos
+            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos | Founder & Tecnologist
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <a class="nav-link active" href="index.html">About <span class="sr-only">(current)</span></a>
@@ -57,17 +57,30 @@
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
-                            <h1 class="card-title">About Me</h1>
+                            <h1 class="card-title" id="about-me">About Me</h1>
                             <hr>
-                            <p class="card-text">Making the world a better place through the powerful and positive benefits provided by the great outdoors. Outdoorful is dedicated to providing current and future outdoor recreational enthusiasts an unprecedented platform for
-                                discovering and engaging in the activities they love. Outdoor recreation is an extremely powerful economic sector that accounts for $887B in annual consumer spending and provides 7.6 million jobs throughout the United States..</p>
+                            <p class="card-text"> I'm currently the Co-Founder & COO of a Denver based startup called Outdoorful. At Outdoorful, we're making the world a better place through the powerful and positive benefits provided by the great outdoors.<br><br>I'm currently
+                                enrolled in the University of Denver's Full-Stack Bootcamp through May 2020. My goal with the course is to grow a better understanding of Outdoorful's technical infrastructure in order to better manage our full-time Engineers
+                                and all technical project prioritization. </p>
 
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
+        <div class="jumbotron">
+            <h1 class="display-4" id="out-head">Outdoorful</h1>
+            <p class="lead">Making adventure part of everyday life.</p>
+
+            <a class="btn btn-primary btn-lg" id="jumbo-btn" href="https://www.outdoorful.com/learn-more" role="button">Learn more</a>
+        </div>
+
+
     </div>
+
+
+
 
     <!-- Footer -->
 
