--- a/portfolio.html
+++ b/portfolio.html
@@ -23,12 +23,12 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="http:\\www.outdoorful.com">
-            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos
+            <img src="images/Angled Tree Logo.svg" width="53" height="40" class="d-inline-block align-center" alt=""> Jordan Servos | Founder & Tecnologist
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item ">
                     <a class="nav-link " href="index.html">About <span class="sr-only">(current)</span></a>
@@ -51,7 +51,7 @@
         <div id="pcard" class="card mb-3" style="max-width: 100%;">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Portfolio</h1>
+                    <h1 id="port">Portfolio</h1>
                     <hr>
                 </div>
             </div>
@@ -63,8 +63,11 @@
                         <div class="card-body">
                             <h5 class="card-title"><a class="nav-link" href="WordGuess.html" id="Hangman">Word Guess Game (Live!) </a></h5>
 
+
                             <p class="card-text">Check out my first Javascript project. It's a classic and clean Word Guess game....enjoy!
                             </p>
+
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/Word-Guess-Game" id="repo">view repo... </a></h8>
 
                         </div>
                     </div>
@@ -74,6 +77,8 @@
                             <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/unit-4-game/" id="Crystal">Crystal Collector Game (Live!)</a></h5>
                             <p class="card-text">For this project, I created another fun and interactive game for web browsers. This time, the app dynamically updates my HTML pages with the jQuery library!</p>
 
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/unit-4-game" id="repo">view repo... </a></h8>
+
                         </div>
                     </div>
 
@@ -82,6 +87,7 @@
                         <div class="card-body">
                             <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/TriviaGame/" id="Trivia">Trivia Game (Live!)</a></h5>
                             <p class="card-text">I created an Outdoor based Trivia game using JavaScript for the logic and jQuery to manipulate HTML. It's also utilizing valid HTML and stylish CSS.</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/TriviaGame" id="repo">view repo... </a></h8>
 
                         </div>
                     </div>
@@ -95,6 +101,7 @@
                         <div class="card-body">
                             <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/GifTastic/" id="Trivia">GifTastic (Live!)</a></h5>
                             <p class="card-text">In this assignment, I used the GIPHY API to make a dynamic web page that populates with gifs of your choice. This includes calling the GIPHY API and using JavaScript and jQuery to change the HTML of on the site.</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/GifTastic" id="repo">view repo... </a></h8>
 
                         </div>
                     </div>
@@ -104,6 +111,7 @@
                             <h5 class="card-title"><a class="nav-link" href="https://jordanservos.github.io/Train-Schedule/" id="Trivia">Train Scheduler (Live!)</a></h5>
                             <p class="card-text">In this assignment, I created a train schedule application that incorporates Firebase to host arrival and departure data. The app will retrieve and manipulate this information with Moment.js. This website will provide up-to-date
                                 information about various trains, namely their arrival times and how many minutes remain until they arrive at their station.</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/Train-Schedule" id="repo">view repo... </a></h8>
 
                         </div>
                     </div>
@@ -112,7 +120,9 @@
                         <div class="card-body">
                             <h5 class="card-title"><a class="nav-link" href="https://team-dane-and-friends.github.io/Parksy/" id="Trivia">Parksy (Live!)</a></h5>
                             <p class="card-text">Paksy puts the splendor of our National Parks at your fingertips! With my crack team, we conceived and executed a design that solves a real-world problem by integrating data received from multiple server-side API requests.
+
                             </p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/Team-Dane-and-Friends/Parksy" id="repo">view repo... </a></h8>
 
                         </div>
                     </div>
