--- a/portfolio.html
+++ b/portfolio.html
@@ -129,6 +129,22 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div id="row2" class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="images/LIRI.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/LIRI-Node-App" id="Trivia">LIRI Node App (Live!)</a></h5>
+                            <p class="card-text">For this assignment I made LIRI! LIRI is like iPhone's SIRI. However, while SIRI is a Speech Interpretation and Recognition Interface, LIRI is a Language Interpretation and Recognition Interface. LIRI is a command line node
+                                app that takes in parameters and gives you back data.</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/LIRI-Node-App" id="repo">view repo... </a></h8>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
 
         </div>
 
