Added bamazon to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -145,6 +145,22 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div id="row2" class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="images/bamazon.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/Bamazon" id="Trivia">Bamazon (Live!)</a></h5>
+                            <p class="card-text">In this activity, I created an Amazon-like storefront with the MySQL skills we learned in this unit. The app will take in orders from customers and deplete stock from the store's inventory. Bamazon also uses MySQL and Inquirer
+                                npm packages for data input and storage.</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/Bamazon" id="repo">view repo... </a></h8>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
 
         </div>
 
