Added Friend Finder to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -161,6 +161,23 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div id="row2" class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="images/FriendFinder.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title"><a class="nav-link" href="https://friend-finder-j.herokuapp.com/" id="Trivia">Friend Finder (Live!)</a></h5>
+                            <p class="card-text">Freind Finder is a compatibility-based application -- basically a dating app. This full-stack site will take in results from your user surveys, then compare their answers with those from other users. The app will then display
+                                the name and picture of the user with the best overall match.
+                            </p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/FriendFinder" id="repo">view repo... </a></h8>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
 
         </div>
 
