added Burger App

--- a/portfolio.html
+++ b/portfolio.html
@@ -178,6 +178,22 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div id="row2" class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="images/burger.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title"><a class="nav-link" href="hhttps://nodeburger-uofd.herokuapp.com/" id="Trivia">Burger App (Live!)</a></h5>
+                            <p class="card-text">In this assignment, I created a burger logger with MySQL, Node, Express, Handlebars and a homemade ORM (yum!). The app follows the MVC design pattern; using Node and MySQL to query and route data in the app, and Handlebars
+                                to generate the HTML.</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/jordanservos/Burger" id="repo">view repo... </a></h8>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
 
         </div>
 
