added needhelp to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -194,6 +194,21 @@
                 </div>
             </div>
 
+            <div class="row">
+                <div id="row2" class="card-deck">
+                    <div class="card">
+                        <img class="card-img-top" src="images/needhelpscreen.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title"><a class="nav-link" href="https://teamdaneremix-project2.herokuapp.com/" id="Trivia">NeedHelp (Live!)</a></h5>
+                            <p class="card-text">For our second project, we created a Full Stack web application focused on fueling the gig economy with task, projects, and assistance that ANYONE can help with</p>
+                            <h8 class="card-title"><a class="nav-link" href="https://github.com/TheDaneRemixTeam/NeedHelp" id="repo">view repo... </a></h8>
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
 
         </div>
 
