updated index style

--- a/index.html
+++ b/index.html
@@ -45,6 +45,21 @@
         </div>
     </nav>
 
+   <!-- Jumbotron -->
+
+   <div class="jumbotron" id="tron">
+    <h1 class="display-4">Welcome...</h1>
+    <p class="lead">Jordan Servos is an experienced full stack technologist, entrepreneur and Co-Founder of Outdoorful, Inc</p>
+    <hr class="my-4" id="hr">
+    <p>Jump to my portfolio to check out my software development journey</p>
+    <p class="lead">
+      <a class="btn btn-primary btn-lg" href="/portfolio.html" role="button" id="checkitout">Check it Out</a>
+    </p>
+  </div>
+
+
+
+
     <!-- About Card -->
 
     <div class="container">
@@ -69,7 +84,7 @@
             </div>
         </div>
 
-        <div class="jumbotron">
+        <div class="jumbotron" id="tron2">
             <h1 class="display-4" id="out-head">Outdoorful</h1>
             <p class="lead">Making adventure part of everyday life.</p>
 
